--- a/ParserDemo/ParserDemo.html
+++ b/ParserDemo/ParserDemo.html
@@ -12,7 +12,7 @@
         
         <div id="header">
             <h1>Parser Generator Demo</h1>
-            <a href="Grammar.pegjs">SysML v2 Grammar</a>
+            <a href="grammar.html">SysML v2 Grammar</a>
             <input type="file" name="inputfile" id="inputfile"> 
         </div>
         
